// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm cjTPPc"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr bVpBBF"
            size="small"
            variant="primary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr ygGOb"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-cYfpLr kjTtqn"
          size="small"
          variant="secondary"
        >
          <div
            className="sc-lgfUwS ldRebZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm ebqvyw"
      size="small"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr hVVEgq"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr iJkudM"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-cYfpLr hwRdfQ"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="sc-lgfUwS ldRebZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr bVpBBF"
            size="small"
            variant="primary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr bVpBBF"
            size="small"
            variant="primary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr ygGOb"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr bVpBBF"
            size="small"
            variant="primary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr ygGOb"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-cYfpLr kjTtqn"
          size="small"
          variant="secondary"
        >
          <div
            className="sc-lgfUwS ldRebZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr bVpBBF"
            size="small"
            variant="primary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-cYfpLr kjTtqn"
          size="small"
          variant="secondary"
        >
          <div
            className="sc-lgfUwS ldRebZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr ygGOb"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr ygGOb"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-cYfpLr kjTtqn"
          size="small"
          variant="secondary"
        >
          <div
            className="sc-lgfUwS ldRebZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button XS 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr hVVEgq"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr hVVEgq"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr iJkudM"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr hVVEgq"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr iJkudM"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-cYfpLr hwRdfQ"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="sc-lgfUwS ldRebZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr hVVEgq"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-cYfpLr hwRdfQ"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="sc-lgfUwS ldRebZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr iJkudM"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-futMm kHcsNe"
    >
      <div
        className="sc-iDRUQT jyulmh"
      >
        <div
          className="sc-eqKtKx HrUgt"
        >
          <button
            className="sc-cYfpLr iJkudM"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-lgfUwS ldRebZ"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-eqKtKx HrUgt"
      >
        <button
          className="sc-cYfpLr hwRdfQ"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="sc-lgfUwS ldRebZ"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
